--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
-
 spring:
   application:
     name: spring-security-basic-jwt
-
-  security:
-    user:
-      name: user
-      password: pass
 
   datasource:
     url: jdbc:postgresql://localhost:5432/telusko-sec
     password: postgres
     username: postgres
 
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+
+
+
+
